Add executible bit to gradlew